# cluas

./: .cursorignore  .gitignore  Dockerfile  FUTURE_IMPROVEMENTS.md  GEMINI.md  NOTICE  PROJECT_SYNOPSIS.md  README.md  app.py  cursor.md  dev_diary.md  gemini.md  main.py  optimisation_ticket_list.md  phase2.md  phase3.md  project_analysis.md  pyproject.toml  quick_check.py  requirements.txt  serp-check.py  serp-check2.py  steps_taken.md  ticket_list.md  ticket_review_first_pass.md  ticket_review_second_pass.md  updated_optimisation_ticket_list.md
.planning/plans/: 001-PLAN.md
cluas/reviews/: code_review_2025-11-15_14-30-00.md  code_review_2025-11-15_15-00-00.md  code_review_2025-11-15_15-30-00.md  code_review_2025-11-15_16-00-00.md
frontend/: README.md  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
notes_etc/: development_guide_01.md  development_guide_02.txt  exposing_cluas_as_an_MCP.py  possible_architecture_diagram.txt  possible_lightweight_architecture_diagram.txt  possible_project_structure.txt
reviews/: changes.md  code_review_2025-11-18_10-00-00.md  code_review_2025-11-18_10-30-00.md  code_review_2025-11-18_16-00-00.md  code_review_2025-11-18_17-00-00.md  code_review_2025-11-18_18-00-00.md  code_review_2025-11-18_19-00-00.md  code_review_2025-11-18_20-00-00.md
src/: orchestrator.py  server.py
src/api/: __init__.py  models.py  routes.py
src/characters/: __init__.py  base_character.py  check_char_init.py  config.py  corvus.py  crow.py  cursor.md  factory.py  llm_provider.py  magpie.py  neutral_moderator.py  raven.py  registry.py  tool_registry.py
src/cluas_mcp/: __init__.py  (+8 more)
tests/: conftest.py  olderidea.py  test_corvus.py  test_memory.py  test_semantic_scholar.py
(+74 files in other folders)
