[project]
name = "cluas"
version = "0.1.0"
description = "a dialectic deliberation engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastmcp>=2.13.1",
    "feedparser>=6.0.12",
    "gradio[mcp,oauth]==6.0.0",
    "groq>=0.36.0",
    "mcp>=1.20.0",
    "newsapi>=0.1.1",
    "python-dotenv>=1.2.1",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "serpapi>=0.1.5",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1"
]

