[project]
name = "cluas"
version = "0.1.0"
description = "a dialectic deliberation engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astral>=3.2",
    "cairosvg>=2.8.2",
    "duckduckgo-search>=8.1.1",
    "feedparser>=6.0.12",
    "gradio[mcp,oauth]==6.0.1",
    "groq>=0.36.0",
    "mcp>=1.20.0",
    "newsapi>=0.1.1",
    "newsapi-python>=0.2.7",
    "openai>=2.8.1",
    "openaq>=0.5.0",
    "python-dotenv>=1.2.1",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "serpapi",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1"
]

[tool.uv.sources]
serpapi = { git = "https://github.com/serpapi/SerpApi-python.git" }

